2003-08-19 Ben Maurer  <bmaurer@users.sourceforge.net>

	* XslVariable.cs: sync to API changes.

2003-08-18 Ben Maurer  <bmaurer@users.sourceforge.net>

	* *.cs: Support for xsl:output. (Oleg)

2003-08-17 Ben Maurer  <bmaurer@users.sourceforge.net>

	* XslCopyOf.cs: handle default ns
	* XslFallback.cs: implement
	* XslLiteralElement.cs: copy namespaces that were declared.
	* XslTemplateContent.cs: handle ext elements
	
2003-08-17 Ben Maurer  <bmaurer@users.sourceforge.net>

	* XslComment.cs, XslTemplateContent.cs: remove dead variables.

2003-08-14  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* XslComment.cs: patch by BenM that implements Evaluate.

2003-08-14 Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* XslCallTemplates.cs : Forgot to commit ;-)

2003-08-14 Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* XslApplyTemplates.cs,
	  XslCallTemplate.cs : Should accept other than element content such
	  as comment and PI.
	* XslNumber.cs : In Compile(), 'value' might not exist. (Think about 
	  it later if how it should be.)
	* XslTemplateContent.cs : "comment" and "number" support. (I know they
	  are still incomplete.)

2003-08-14 Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* Added XslComment.cs.

2003-08-05 Ben Maurer  <bmaurer@users.sourceforge.net>

	* XslVariable.cs: Fix up how variables are evaluated.

2003-08-04 Ben Maurer  <bmaurer@users.sourceforge.net>

	* XslMessage.cs: Implement.

2003-08-04 Ben Maurer  <bmaurer@users.sourceforge.net>

	* XslText.cs: I can make that parsing simpler!
	* XslText.cs, XslValueof.cs: support for disable-output-escaping.

2003-08-04 Ben Maurer  <bmaurer@users.sourceforge.net>

	* XslElement.cs, XslAttribute.cs: Better support for namespaces.
	* XslAvt.cs: When precalculating, if the AVT is null (ie, the
	attribute was not specified), just return null, that will be the
	result.

2003-08-01 Ben Maurer  <bmaurer@users.sourceforge.net>

	* XslNumber.cs: More stubbing.

2003-07-31 Ben Maurer  <bmaurer@users.sourceforge.net>
